Outcome, explanatory, comparison groups.

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -9,4 +9,10 @@ output: github_document
 
 ## Section 2. Data analysis plan
 
+Our outcome variable is whether an H-2B Visa certification request made by a company is successful. Our explanatory variables are the state in which the request made, the type of work the request was made for, by DOT Code, the number of workers requested, the time of the year the request was made, and the salary for workers. 
+
+The comparison groups will include different states, which could be combined into regions, different occupations, such as agricultural or service, the seasons in which a request was made, the salary of the workers, and whether the workers are recieving benefits. 
+
+
+
 ## Section 3. Data
