--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -5,6 +5,12 @@ date: "3-26-18"
 output: github_document
 ---
 
+```{r load-packages}
+install.packages("tidyverse")
+library(tidyverse)
+```
+
+
 ## Section 1. Introduction
 
 ## Section 2. Data analysis plan
@@ -13,6 +19,9 @@ Our outcome variable is whether an H-2B Visa certification request made by a com
 
 The comparison groups will include different states, which could be combined into regions, different occupations, such as agricultural or service, the seasons in which a request was made, the salary of the workers, and whether the workers are recieving benefits. 
 
+```{r join-data}
+h2b <- read_csv("data/H-2B_FY2000csv.html")
+```
 
 
 ## Section 3. Data
