--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -5,16 +5,10 @@ date: "3-26-18"
 output: github_document
 ---
 
-<<<<<<< HEAD
 ```{r - load_packages}
 library(tidyverse)
 library(broom)
 library(infer)
-=======
-```{r load-packages}
-install.packages("tidyverse")
-library(tidyverse)
->>>>>>> e14e4d77a608289da4ac28fc65dc899b6074f0c9
 ```
 
 
@@ -22,18 +16,20 @@ library(tidyverse)
 
 ## Section 2. Data analysis plan
 
-Our outcome variable is whether an H-2B Visa certification request made by a company is successful. Our explanatory variables are the state in which the request made, the type of work the request was made for, by DOT Code, the number of workers requested, the time of the year the request was made, and the salary for workers. 
+Our outcome variable is whether an H-2B Visa certification request made by a company is successful. Our explanatory variables are the state in which the request was made, the type of work the request was made for, by DOT Code, the number of workers requested, the time of the year the request was made, and the salary for workers. 
 
 The comparison groups will include different states, which could be combined into regions, different occupations, such as agricultural or service, the seasons in which a request was made, the salary of the workers, and whether the workers are recieving benefits. 
 
+We will primarily use hypothesis testing to determine variable independence. In other words, we will use hypothesis tests to determine if there is a statistically significant difference in the proportion of Visa applicants that get accepted. We will also make a linear model to predict whether or not certain cases would or wouldn't be granted a Visa. In doing this, we will used Cross Validation to confirm that our model would be a good predictor in situations outside of our data.  
+
 ```{r join-data}
-h2b <- read_csv("data/H-2B_FY2000csv.html")
+#h2b <- read_csv("data/H-2B_FY2000csv.html")
 ```
 
 
 ## Section 3. Data
 ```{r - data}
-glimpse()
+#glimpse()
 
 ```
 
