--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -21,6 +21,7 @@ For context, an H2-B visa is a temporary work visa for foreign workers with a jo
 The dataset we are using is from the Department of Labor's Office of Foreign Labor Certification (OFLC). The data comes from H-2B applications that have been received and entered into the Department of Labor Tracking system. Specific information in the dataset about the employers was gathered through the foreign labor certification applications employers submitted. Data relating to wage levels was provided by the Bureau of Labor Statistics' Occupational Employment Statistics Program. 
 
 The data is sorted by fiscal year, from 2000 to 2013. Each observation is a different petition filed by an employer. The variables in the dataset are as follows: CASE_NUMBER, DECISION_DATE, NPC_SUBMITTED_DATE, CASE_STATUS, VISA_CLASS, ALIEN_WORK_STATE, CERTIFICATION_BEGIN_DATE, CERTIFICATION_END_DATE, EMPLOYER_NAME, EMPLOYER_ADDRESS1, EMPLOYER_ADDRESS2, EMPLOYER_CITY, EMPLOYER_STATE, EMPLOYER_POSTAL_CODE, AGENT_ATTORNEY_NAME, AGENT_ATTORNEY_CITY, AGENT_ATTORNEY_STATE, SOC_CODE, SOC_NAME, JOB_TITLE, NBR_WORKERS_CERTIFIED, PREVIALING_WAGE (spelling error present in data), PW_UNIT_OF_PAY, BASIC_RATE_OF_PAY, BASIC_UNIT_OF_PAY
+
 ## Section 2. Data analysis plan
 
 Our outcome variable is whether an H-2B Visa certification request made by a company is successful. Our explanatory variables are the state in which the request was made, the type of work the request was made for, by DOT Code, the number of workers requested, the time of the year the request was made, and the salary for workers. 
@@ -30,8 +31,8 @@ The comparison groups will include different states, which could be combined int
 We will primarily use hypothesis testing to determine variable independence. In other words, we will use hypothesis tests to determine if there is a statistically significant difference in the proportion of Visa applicants that get accepted. We will also make a linear model to predict whether or not certain cases would or wouldn't be granted a Visa. In doing this, we will used Cross Validation to confirm that our model would be a good predictor in situations outside of our data.  
 
 ```{r join-data}
-#h2b <- read_excel("data/H-2B_FY2008.xlsx") %>%
-#  full_join(read_excel("data/H-2B_FY2009.xlsx"))
+h2b <- read_excel("data/H-2B_FY2008.csv") %>%
+  full_join(read_excel("data/H-2B_FY2009.csv"))
 
 ```
 
