--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -36,6 +36,9 @@ h2b <- read_csv("data/H-2B_FY2008.csv") %>%
   full_join(read_csv("data/H-2B_FY2010.csv")) %>%
   full_join(read_csv("data/H-2B_FY2011.csv")) %>%
   full_join(read_csv("data/H-2B_FY2012.csv")) 
+
+h2b <- h2b %>%
+  select(CASE_NO, DECISION_DATE, NPC_SUBMITTED_DATE, CASE_STATUS, ALIEN_WORK_STATE, CERTIFICATION_BEGIN_DATE, CERTIFICATION_END_DATE, EMPLOYER_CITY, EMPLOYER_STATE, EMPLOYER_POSTAL_CODE, AGENT_ATTORNEY_CITY, AGENT_ATTORNEY_STATE, JOB_TITLE, NBR_WORKERS_CERTIFIED, BASIC_RATE_OF_PAY, BASIC_UNIT_OF_PAY, DOT_OCCUPATIONAL_CODE, NBR_WORKERS_REQUESTED, DOT_NAME, SOC_CODE, SOC_NAME)
 ```
 
 
