worked on season mutation

--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -33,7 +33,7 @@ h2b <- h2b %>%
 
 ### Data Manipulation
 ```{r - uncapitalize_variables}
-(h2b <- h2b %>%
+h2b <- h2b %>%
   mutate(case_no = CASE_NO, 
          decision_date = DECISION_DATE,
          npc_submitted_date = NPC_SUBMITTED_DATE,
@@ -56,7 +56,7 @@ h2b <- h2b %>%
          nbur_workers_requested =NBR_WORKERS_REQUESTED, 
          dot_name = DOT_NAME, 
          soc_code = SOC_CODE, 
-         soc_name = SOC_NAME))
+         soc_name = SOC_NAME)
 
 h2b <- h2b %>%
   select(case_no, decision_date, npc_submitted_date, case_status, alien_work_state, certification_begin_date, certification_end_date, employer_city, employer_state, employer_postal_code, agent_attorney_city, agent_attorney_state, job_title, nbr_workers_certified, prevailing_wage, pw_unit_of_pay, basic_rate_of_pay, basic_unit_of_pay, dot_occupational_code, nbur_workers_requested, dot_name, soc_code, soc_name)
@@ -78,11 +78,80 @@ h2b <- h2b %>%
 
 ```{r - mutate_season}
 
-#h2b <- h2b %>%
-  #mutate(decision_season = case_when(
-    
-    
-  #))
+h2b_1 <- h2b %>%
+  separate(decision_date, c('decision_month', 'decision_day', 'decision_year'), sep="/", remove = FALSE)
+
+h2b_2 <- h2b %>%
+  separate(npc_submitted_date, c('submitted_month', 'submitted_day', 'submitted_year'), sep="/", remove = FALSE)
+
+h2b_filter_1 <- h2b_1 %>%
+  filter(decision_day == "NA") %>%
+  separate(decision_date, c('decision_day', 'decision_month', 'decision_year'), sep="-", remove = FALSE) 
+
+h2b_filter_2 <- h2b_2 %>%
+  filter(submitted_day == "NA") %>%
+    separate(npc_submitted_date, c('submitted_day', 'submitted_month', 'submitted_year'), sep = "-", remove = FALSE)
+  
+h2b <- h2b_1 %>%
+  full_join(h2b_2) %>%
+  full_join(h2b_filter_1) %>%
+  full_join(h2b_filter_2)
+
+h2b <- h2b %>%
+  mutate(decision_season = case_when(
+    decision_month == "1" ~ "winter", 
+    decision_month == "2" ~ "winter",
+    decision_month == "3" ~ "spring",
+    decision_month == "4" ~ "spring",
+    decision_month == "5" ~ "spring",
+    decision_month == "6" ~ "summer",
+    decision_month == "7" ~ "summer",
+    decision_month == "8" ~ "summer",
+    decision_month == "9" ~ "fall",
+    decision_month == "10" ~ "fall", 
+    decision_month == "11" ~ "fall",
+    decision_month == "12" ~ "winter",
+    decision_month == "Jan" ~ "winter", 
+    decision_month == "Feb" ~ "winter",
+    decision_month == "Mar" ~ "spring",
+    decision_month == "Apr" ~ "spring",
+    decision_month == "May" ~ "spring",
+    decision_month == "Jun" ~ "summer",
+    decision_month == "Jul" ~ "summer",
+    decision_month == "Aug" ~ "summer",
+    decision_month == "Sep" ~ "fall",
+    decision_month == "Oct" ~ "fall", 
+    decision_month == "Nov" ~ "fall",
+    decision_month == "Dec" ~ "winter"
+  ))
+
+h2b <- h2b %>%
+  mutate(submitted_season = case_when(
+    submitted_month == "1" ~ "winter", 
+    submitted_month == "2" ~ "winter",
+    submitted_month == "3" ~ "spring",
+    submitted_month == "4" ~ "spring",
+    submitted_month == "5" ~ "spring",
+    submitted_month == "6" ~ "summer",
+    submitted_month == "7" ~ "summer",
+    submitted_month == "8" ~ "summer",
+    submitted_month == "9" ~ "fall",
+    submitted_month == "10" ~ "fall", 
+    submitted_month == "11" ~ "fall",
+    submitted_month == "12" ~ "winter",
+    submitted_month == "Jan" ~ "winter", 
+    submitted_month == "Feb" ~ "winter",
+    submitted_month == "Mar" ~ "spring",
+    submitted_month == "Apr" ~ "spring",
+    submitted_month == "May" ~ "spring",
+    submitted_month == "Jun" ~ "summer",
+    submitted_month == "Jul" ~ "summer",
+    submitted_month == "Aug" ~ "summer",
+    submitted_month == "Sep" ~ "fall",
+    submitted_month == "Oct" ~ "fall", 
+    submitted_month == "Nov" ~ "fall",
+    submitted_month == "Dec" ~ "winter"
+  ))
 
 ```
 
