--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -10,10 +10,8 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ```{r - install_packages}
-
 library(tidyverse)
 library(readxl)
-
 ```
 
 
@@ -155,6 +153,25 @@ h2b <- h2b %>%
 
 ```
 
+```{r-mutate_region}
+h2b <- h2b %>%
+  mutate(region = case_when(
+    employer_state == "WA" | employer_state == "OR" | employer_state == "CA" |  employer_state == "ID" | employer_state == "MT" | employer_state == "WY" | employer_state == "NV" | employer_state == "UT" | employer_state == "CO" | employer_state == "AZ" | employer_state == "NM" | employer_state == "AK" | employer_state == "HI" ~ "West",
+    employer_state == "ND" | employer_state == "SD" | employer_state == "NE" | employer_state == "KS" | employer_state == "MN" | employer_state == "IA" | employer_state == "MO" | employer_state == "WI" | employer_state == "IL" | employer_state == "MI" | employer_state == "IN" | employer_state == "OH" ~ "Midwest",
+    employer_state == "TX" | employer_state == "OK" | employer_state == "AR" | employer_state == "LA" | employer_state == "MS" | employer_state == "AL" | employer_state == "TN" | employer_state == "KY" | employer_state == "WV" | employer_state == "MD" | employer_state == "DE" | employer_state == "VA" | employer_state == "NC" | employer_state == "SC" | employer_state == "GA" | employer_state == "FL" ~ "South",
+    employer_state == "ME" | employer_state == "NH" | employer_state == "VT" | employer_state == "MA" | employer_state == "CT" | employer_state == "RI" | employer_state == "NJ" | employer_state == "NY" | employer_state == "PA" ~ "Northeast"
+  ))
+```
+
+```{r-mutate_job_categories}
+#h2b %>%
+  #select(dot_occupational_code)
+
+#<- h2b %>%
+ # mutate(occupation_category = case_when(
+    
+  #))
+```
 
 ### Visualizations
 
