--- a/project/project.Rmd
+++ b/project/project.Rmd
@@ -78,7 +78,7 @@ h2b <- h2b %>%
 ```{r - mutate_season}
 
 h2b_1 <- h2b %>%
-  separate(decision_date, c('decision_month', 'decision_day', 'decision_year'), sep="/", remove = FALSE)
+  separate(decision_date, c('decision_month', 'decision_day', 'decision_year'), sep="/", remove = FALSE) 
 
 h2b_2 <- h2b %>%
   separate(npc_submitted_date, c('submitted_month', 'submitted_day', 'submitted_year'), sep="/", remove = FALSE)
@@ -87,14 +87,24 @@ h2b_filter_1 <- h2b_1 %>%
   filter(decision_day == "NA") %>%
   separate(decision_date, c('decision_day', 'decision_month', 'decision_year'), sep="-", remove = FALSE) 
 
+h2b_1 <- h2b_1 %>%
+  filter(decision_day != "NA")
+
 h2b_filter_2 <- h2b_2 %>%
   filter(submitted_day == "NA") %>%
     separate(npc_submitted_date, c('submitted_day', 'submitted_month', 'submitted_year'), sep = "-", remove = FALSE)
 
+h2b_2 <- h2b_2  %>%
+  filter(submitted_day != "NA")
+
 h2b <- h2b_1 %>%
-  full_join(h2b_2) %>%
-  full_join(h2b_filter_1) %>%
+  full_join(h2b_2) 
+  
+h2b_filter <- h2b_filter_1 %>%
   full_join(h2b_filter_2)
+
+h2b <- h2b %>%
+  full_join(h2b_filter)
 
 h2b <- h2b %>%
   mutate(decision_season = case_when(
